[package]
name = "minipow"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

[dependencies]
sp-core = { version = "30.0.0", default-features = false }         # align with your substrate version
sp-runtime = { version = "30.0.0", default-features = false }
sp-consensus-pow = { version = "0.44.0", default-features = false } # provides Seal type & difficulty API
sc-consensus-pow = { version = "0.44.0", default-features = false } # PowAlgorithm trait lives here
sp-api = { version = "30.0.0", default-features = false }
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
minipow = { path = "../consensus/minipow" }
sc-consensus-pow = { version = "0.44.0" }


[features]
default = ["std"]
std = [
  "sp-core/std",
  "sp-runtime/std",
  "sp-consensus-pow/std",
  "sc-consensus-pow/std",
  "sp-api/std",
  "parity-scale-codec/std",
]