[package]
name = "minipow"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

[dependencies]
parity-scale-codec = '3.2.1'
rand = { version = "0.8", features = ["small_rng"] }
sha3 = "0.9"
noise = "0.7.0"
log = "0.4.17"



# Substrate packages
# consensus-geo-pow = { path = '../consensus/minipow' }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
sp-std = '4.0.0'
sc-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
